--- a/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Views/Shared/_Layout.cshtml
+++ b/src/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Senparc.Weixin.MP.Sample</p>
+            <p>&copy; 2017 - Senparc.Weixin Sample for Azure MySQL</p>
         </footer>
     </div>
 
